--- a/app/assets/stylesheets/components/_card_loan.scss
+++ b/app/assets/stylesheets/components/_card_loan.scss
@@ -9,12 +9,17 @@
   margin: 20px 20px 20px;
   padding: 20px;
 
+  .card-odd{
+    display: block;
+    height: 600px;
+    width: 360px;
+    margin:0 0 50px;
+  }
   .card-even{
     display: block;
     height: 600px;
     width: 360px;
-    margin:120px 0 0;
-    box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.2);
+    margin:120px 0 50px;
   }
 
   .loan-card-image{
@@ -30,17 +35,14 @@
   }
 
   .card-lending{
-    background-color: blue;
-  }
-  .card-borrowing{
-    background-color: green;
-  }
-
-  .card-odd{
-    display: block;
-    height: 600px;
-    width: 360px;
-    margin:0 0 0;
+    border: solid 20px #465c9c7e;
+    border-radius: 5px 5px 0 0;
     box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.2);
   }
+  .card-borrowing{
+    border-radius: 5px 5px 0 0;
+    border: solid 20px #f5d64e7e;
+    box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.2);
+  }
+
 }
