fixed lending and borrowing"

--- a/app/views/loans/new.html.erb
+++ b/app/views/loans/new.html.erb
@@ -7,7 +7,7 @@
         <%= i.input :description %>
       <% end %>
       <%= f.input :photo, as: :file %>
-      <%= f.association :user, label: "Borrower", label_method: :first_name, value_method: :last_name, include_blank: false %>
+      <%= f.association :user, label: "Borrower", label_method: :first_name, value_method: :id, include_blank: false %>
       <%= f.input :loan_date %>
       <%= f.input :return_date %>
       <%= f.submit "Let me lend this!", class: "btn btn-primary" %>
