--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -12,15 +12,22 @@
 
 .card-product {
   overflow: hidden;
-  height: 120px;
-  background: white;
+  height: 250px;
+  width: 250px;
+  background: rgb(255,255,255);
+  background: linear-gradient(45deg, rgba(255,255,255,0.4) 0%, rgba(255,255,255,0.4) 50%, $green 50%);
   box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.2);
+  border: 2px white solid;
   display: flex;
+  flex-direction: column;
+  justify-content: center;
   align-items: center;
   margin-bottom: 20px;
   padding: 20px;
-  border-radius: 10px;
-  width: 100%;
+  border-radius: 5px;
+  h2 {
+    color: white;
+  }
 }
 
 .card-product:hover {
@@ -53,23 +60,46 @@
   padding: 16px;
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
-  align-items: start;
+  justify-content: center;
+  align-items: center;
   flex-wrap: wrap;
+  text-align: center;
 }
 
 .user-cards {
-  background-color: white;
-  box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.3);
-  border-radius: 3px;
-  padding: 40px 30px;
-  margin: 20px;
-  width: 50%;
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
+  // background-color: white;
+  // background: rgb(255,255,255);
+  // background: linear-gradient(45deg, rgba(255,255,255,0.6) 0%, rgba(255,255,255,1) 50%, $green 50%);
+  // box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.3);
+  // border-radius: 3px;
+  // padding: 40px 30px;
+  // margin: 20px;
+  // width: 300px;
+  // height: 300px;
+  // display: flex;
+  // justify-content: center;
+  // flex-direction: column;
+  margin: 10px;
   a {
     text-decoration: none;
     color: inherit;
   }
+}
+
+.loan-description {
+  p {
+    font-size: 15px;
+    font-weight: 500;
+  }
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+.card-img {
+  margin: 20px;
+
 }
