--- a/app/assets/stylesheets/config/_fonts.scss
+++ b/app/assets/stylesheets/config/_fonts.scss
@@ -22,7 +22,7 @@ h1 {
 }
 
 h2 {
-  font-family: 'Oswald', sans-serif!important;
+  font-family: 'Playfair Display', serif!important;
   color: black;
   text-transform: uppercase;
 }
