--- a/app/views/shared/_introduction.html.erb
+++ b/app/views/shared/_introduction.html.erb
@@ -1,14 +1,20 @@
 <div class="introduction">
-  <div class="step1 row">
-      <h1 class='col-4'>01.</h1>
-      <p class='text-justify col-8'>Lorem ipsum dolor sit amet. Et quos eligendi aut quod repudiandae est explicabo quidem. Et voluptatem voluptate sed inventore fugiat At nostrum magni.
-    33 nobis nihil sed dolores distinctio et pariatur dolor aut libero culpa aut molestias modi ut consectetur quia id explicabo temporibus. Qui quia vero ad voluptas accusamus sit corrupti voluptatem ut totam ipsa. Id natus voluptatem est deleniti quaerat non molestiae pariatur quo animi aperiam sit velit mollitia est nulla repellendus. Eum molestiae porro hic rerum recusandae est assumenda earum non amet assumenda cum delectus delectus quo vitae itaque a dolor ducimus.</p>
-
+  <div class="introduction-step-1">
+    <div class="odd-number"><h1>01.</h1></div>
+    <div class="odd-text">
+      <p>You're the borrowing type? Great, you'll remember who've you borrowed from by clicking on the 'Borrow' button. More on the lending side? Easy peasy, just click 'Lend an item'</p>
+    </div>
   </div>
-  <div class="step2 d-flex justify-content-end row">
-      <h1 class='col-4'>02.</h1>
-      <p class='text-justify col-8'>Lorem ipsum dolor sit amet. Et quos eligendi aut quod repudiandae est explicabo quidem. Et voluptatem voluptate sed inventore fugiat At nostrum magni.
-
-  33 nobis nihil sed dolores distinctio et pariatur dolor aut libero culpa aut molestias modi ut consectetur quia id explicabo temporibus. Qui quia vero ad voluptas accusamus sit corrupti voluptatem ut totam ipsa. Id natus voluptatem est deleniti quaerat non molestiae pariatur quo animi aperiam sit velit mollitia est nulla repellendus. Eum molestiae porro hic rerum recusandae est assumenda earum non amet assumenda cum delectus delectus quo vitae itaque a dolor ducimus.</p>
+  <div class="introduction-step-2">
+    <div class="even-number"><h1>02.</h1></div>
+    <div class="even-text">
+      <p>Let us know who you're borrowing from or lending to and in a few clicks, your item will display on your main page</p>
+    </div>
+  </div>
+  <div class="introduction-step-3">
+    <div class="odd-number"><h1>03.</h1></div>
+    <div class="odd-text">
+      <p>You've returned what you borrowed? Wait for your kind lender to confirm by sending him a quick ping. And voilà !</p>
+    </div>
   </div>
 </div>
