--- a/app/assets/stylesheets/components/_btns.scss
+++ b/app/assets/stylesheets/components/_btns.scss
@@ -1,5 +1,4 @@
 .borrow-btns {
-  background-color: rgba($color: #ffffff, $alpha: 0.2);
   border-radius: 61px;
   border: 1px white solid;
   color: rgb(0, 0, 0);
@@ -11,12 +10,12 @@
 
 .borrow-btns:hover {
   color: rgba($color: #000000, $alpha: 0.8)!important;
-  background-color: rgba($color: #ffffff, $alpha: 0.7)!important;
+  background-color: rgba(219,231,228,0.7)!important;
+  // background-color: rgba($color: #ffffff, $alpha: 0.7)
 }
 
 
 .lend-btns {
-  background-color: rgba($color: #ffffff, $alpha: 0.2);
   border: 1px rgba(0, 0, 0, 0.5) solid;
   border-radius: 61px;
   color: rgb(255, 255, 255);
@@ -27,7 +26,8 @@
 
 .lend-btns:hover {
   color: rgba($color: #000000, $alpha: 0.8)!important;
-  background-color: rgba($color: #ffffff, $alpha: 0.9)!important;
+  background-color: rgba(255,93,143,0.7)!important;
+  // background-color: rgba($color: #ffffff, $alpha: 0.9)!important;
 }
 
 .submit-btns {
