--- a/app/assets/stylesheets/components/_card_loan.scss
+++ b/app/assets/stylesheets/components/_card_loan.scss
@@ -33,15 +33,20 @@
       clip-path: polygon(0 0, 252% 0, 119% 103%, 0 80%);
     }
   }
+  .loan-card-item-info-actions{
+    font-size: 30px;
+    padding: 0 0 30px;
+  }
 
   .card-lending{
-    border: solid 20px #465c9c7e;
-    border-radius: 5px 5px 0 0;
+    // border: solid 20px #465c9c7e;
+    background-color: rgba(255,93,143,0.5);
     box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.2);
   }
   .card-borrowing{
+    background-color: rgba(219,231,228,0.5);
     border-radius: 5px 5px 0 0;
-    border: solid 20px #f5d64e7e;
+    // border: solid 20px #f5d64e7e;
     box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.2);
   }
 
