--- a/app/views/shared/_index_loans.html.erb
+++ b/app/views/shared/_index_loans.html.erb
@@ -1,7 +1,7 @@
 <div class="dashboard-container">
   <div class="loan-index">
     <% loans.each do |loan| %>
-      <% if loan.id % 2 == 0 %>
+      <% if loan.id % 2 == 0 && loan.status != "returned" %>
         <div class="card-even">
           <% if loan.item.user == current_user %>
             <div class="card-lending">
@@ -15,7 +15,13 @@
               <div class="loan-card-item-info-actions">
                 <%='💌'%>
                 <%='🔄'%>
-                <%='⭐️'%>
+                <% if loan.user.reviews.length >= 2 %>
+                  <%= image_tag("star-2.png", class: "review-icon") %>
+                <% elsif loan.user.reviews.length == 1 %>
+                  <%= image_tag("star-1.png", class: "review-icon")  %>
+                <% else %>
+                  <%= image_tag("star.png", class: "review-icon") %>
+                <% end %>
               </div>
               <br>
               <br>
@@ -31,8 +37,14 @@
               </div>
               <div class="loan-card-item-info-actions">
                 <%='💌'%>
-                <%= link_to '🔄', loan_mark_path(loan), method: :patch, class: 'submit-btns' %>
-                <%='⭐️'%>
+                <%= link_to '🔄', loan_mark_path(loan), method: :patch %>
+                <% if loan.user.reviews.length >= 2 %>
+                  <%= image_tag("https://a.slack-edge.com/production-standard-emoji-assets/13.0/google-medium/1f31f@2x.png") %>
+                <% elsif loan.user.reviews.length == 1 %>
+                  <%= image_tag("https://a.slack-edge.com/production-standard-emoji-assets/13.0/google-medium/2b50@2x.png")  %>
+                <% else %>
+                  <%= image_tag("https://a.slack-edge.com/production-standard-emoji-assets/13.0/google-medium/1f610@2x.png") %>
+                <% end %>
               </div>
               <br>
               <br>
@@ -53,7 +65,13 @@
               <div class="loan-card-item-info-actions">
                 <%='💌'%>
                 <%='🔄'%>
-                <%='⭐️'%>
+                <% if loan.user.reviews.length >= 2 %>
+                  <%= image_tag("https://a.slack-edge.com/production-standard-emoji-assets/13.0/google-medium/1f31f@2x.png", class: "review-icon") %>
+                <% elsif loan.user.reviews.length == 1 %>
+                  <%= image_tag("https://a.slack-edge.com/production-standard-emoji-assets/13.0/google-medium/2b50@2x.png", class: "review-icon")  %>
+                <% else %>
+                  <%= image_tag("https://a.slack-edge.com/production-standard-emoji-assets/13.0/google-medium/1f610@2x.png", class: "review-icon") %>
+                <% end %>
               </div>
               <br>
               <br>
@@ -70,7 +88,13 @@
               <div class="loan-card-item-info-actions">
                 <%='💌'%>
                 <%='🔄'%>
-                <%='⭐️'%>
+                <% if loan.user.reviews.length >= 2 %>
+                  <%= image_tag("https://a.slack-edge.com/production-standard-emoji-assets/13.0/google-medium/1f31f@2x.png", class: "review-icon") %>
+                <% elsif loan.user.reviews.length == 1 %>
+                  <%= image_tag("https://a.slack-edge.com/production-standard-emoji-assets/13.0/google-medium/2b50@2x.png", class: "review-icon")  %>
+                <% else %>
+                  <%= image_tag("https://a.slack-edge.com/production-standard-emoji-assets/13.0/google-medium/1f610@2x.png", class: "review-icon") %>
+                <% end %>
               </div>
               <br>
               <br>
