--- a/app/assets/stylesheets/config/_fonts.scss
+++ b/app/assets/stylesheets/config/_fonts.scss
@@ -23,7 +23,7 @@ h1 {
 
 h2 {
   font-family: 'Playfair Display', serif!important;
-  color: black;
+  ccolor: black;
   text-transform: uppercase;
 }
 
