--- a/app/assets/stylesheets/components/_card_loan.scss
+++ b/app/assets/stylesheets/components/_card_loan.scss
@@ -38,11 +38,12 @@
     border: solid 20px #465c9c7e;
     border-radius: 5px 5px 0 0;
     box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.2);
-  }
+   }
   .card-borrowing{
     border-radius: 5px 5px 0 0;
     border: solid 20px #f5d64e7e;
     box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.2);
+    // position: relative;
   }
 
 }
