--- a/app/assets/stylesheets/components/_chatroom.scss
+++ b/app/assets/stylesheets/components/_chatroom.scss
@@ -28,3 +28,17 @@
     }
   }
 }
+
+.chat-container {
+  // margin-top: 100px;
+  margin-top: 10px;
+  padding: 5px;
+  margin: 3px;
+  border-radius: 4px;
+  height: auto;
+}
+
+.chatbox {
+  // position: absolute;
+  // bottom: 10px;
+}
