--- a/app/views/shared/_index_loans.html.erb
+++ b/app/views/shared/_index_loans.html.erb
@@ -1,7 +1,7 @@
 <div class="dashboard-container">
   <div class="loan-index">
     <% loans.each do |loan| %>
-      <% if loan.id % 2 == 0 && loan.status != "returned" %>
+      <% if loan.id % 2 == 0  %>
         <div class="card-even">
           <% if loan.item.user == current_user %>
             <div class="card-lending">
@@ -14,7 +14,7 @@
               </div>
               <div class="loan-card-item-info-actions">
                 <%='💌'%>
-                <%='🔄'%>
+                <%= link_to '🔄', loan_mark_path(loan), method: :patch %>
                 <% if loan.user.reviews.length >= 2 %>
                   <%= '🌟' %>
                 <% elsif loan.user.reviews.length == 1 %>
@@ -64,7 +64,7 @@
               </div>
               <div class="loan-card-item-info-actions">
                 <%='💌'%>
-                <%='🔄'%>
+                <%= link_to '🔄', loan_mark_path(loan), method: :patch %>
                 <% if loan.user.reviews.length >= 2 %>
                   <%= '🌟' %>
                 <% elsif loan.user.reviews.length == 1 %>
@@ -87,7 +87,7 @@
               </div>
               <div class="loan-card-item-info-actions">
                 <%='💌'%>
-                <%='🔄'%>
+                <%= link_to '🔄', loan_mark_path(loan), method: :patch %>
                 <% if loan.user.reviews.length >= 2 %>
                   <%= '🌟' %>
                 <% elsif loan.user.reviews.length == 1 %>
