--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -16,7 +16,13 @@
               <div class="loan-card-item-info-actions">
                 <%='💌'%>
                 <%='🔄'%>
-                <%='⭐️'%>
+                <% if loan.user.reviews.length >= 2 %>
+                  <%= '🌟' %>
+                <% elsif loan.user.reviews.length == 1 %>
+                  <%= '⭐' %>
+                <% else %>
+                  <%= '😒' %>
+                <% end %>
               </div>
             </div>
           <% end %>
@@ -35,12 +41,27 @@
               <div class="borrow-card-item-info-actions">
                 <%='💌'%>
                 <%='🔄'%>
-                <%='⭐️'%>
+                <% if loan.user.reviews.length >= 2 %>
+                  <%= '🌟' %>
+                <% elsif loan.user.reviews.length == 1 %>
+                  <%= '⭐' %>
+                <% else %>
+                  <%= '😒' %>
+                <% end %>
               </div>
             </div>
           <% end %>
       <% end %>
     </div>
   </div>
-
+<p style="color: white; font-size: 40px;">Reviews for <%= @user.first_name %></p>
+<ul style="list-style-type: none">
+  <% if @user.reviews.present? %>
+    <%  @user.reviews.each do |review| %>
+      <li>"<%= review.comment %>" from <%= review.loan.item.user.first_name %></li>
+    <% end %>
+  <% else %>
+    <li>The user has no reviews...</li>
+  <% end %>
+</ul>
 </div>
