--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -1,14 +1,12 @@
 .loans-user{
   display: flex;
-  justify-content: space-between;
+  // justify-content: space-between;
+  justify-content: center;
   align-items: center;
   flex-wrap: wrap;
+  margin: 0 0 60px;
   .loans-per-user{
-    width: 100vh;
-    // background-color: white;
-    display: flex;
-    justify-content: space-between;
-    width: 900px;
+
     .user-card{
       margin: 20px;
       width: 300px;
