--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -5,6 +5,9 @@
   align-items: center;
   flex-wrap: wrap;
   margin: 0 0 60px;
+  a{
+    text-decoration: none;
+  }
   .loans-per-user{
 
     .user-card{
