--- a/app/views/shared/_loans_index.html.erb
+++ b/app/views/shared/_loans_index.html.erb
@@ -15,9 +15,9 @@
       <% end %>
     <% end %>
 
+  <%= link_to user_path(user), :action => 'go' do %>
     <div class="loans-per-user">
       <% if @counter_lent > 0 || @counter_borrowed > 0 %>
-        <%# <%= link_to user_path(user), :action => 'go' %>
         <div class="user-card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%= cl_image_path user.photo.key, width: 300, height: 300, crop: :fill %>')">
           <%# <div class='card-img'><%= cl_image_tag (user.photo.key), style: 'width:100px'</div> %>
           <div class="lent"><p><%= "Lent: #{@counter_lent}" %></p></div>
@@ -26,5 +26,6 @@
         </div>
       <% end %>
     </div>
+  <% end %>
   <% end %>
 </div>
