--- a/app/assets/stylesheets/components/_card_loan.scss
+++ b/app/assets/stylesheets/components/_card_loan.scss
@@ -14,12 +14,14 @@
     height: 600px;
     width: 360px;
     margin:0 0 50px;
+    border-radius: 5px;
   }
   .card-even{
     display: block;
     height: 600px;
     width: 360px;
     margin:120px 0 50px;
+    border-radius: 5px;
   }
 
   .loan-card-image{
