--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -14,6 +14,7 @@
       margin: 20px;
       width: 300px;
       height: 300px;
+      border-radius: 5px;
       // display: flex;
       .lent{
         padding: 40px 150px 0 0;
