--- a/app/views/shared/_index_loans.html.erb
+++ b/app/views/shared/_index_loans.html.erb
@@ -10,7 +10,7 @@
               <div class="loan-card-item-info">
                 <p><%= "👤 Lent to #{loan.user.first_name}" %></p>
                 <p><%="🎯 #{loan.return_date}" %></p>
-                <p><%= "👌 #{loan.item.description}" %></p>
+                <p><%= "📝 #{loan.item.description}" %></p>
               </div>
               <div class="loan-card-item-info-actions">
                 <%=' 💌'%>
@@ -26,7 +26,7 @@
               <div class="loan-card-item-info">
                 <p><%="👤 Borrowed from #{loan.item.user.first_name}" %></p>
                 <p><%="🎯 #{loan.return_date}" %></p>
-                <p><%= "👌 #{loan.item.description}" %></p>
+                <p><%= "📝 #{loan.item.description}" %></p>
               </div>
               <div class="loan-card-item-info-actions">
                 <%=' 💌'%>
@@ -46,7 +46,7 @@
               <div class="loan-card-item-info">
                 <p><%= "👤 Lent to #{loan.user.first_name}" %></p>
                 <p><%="🎯 #{loan.return_date}" %></p>
-                <p><%= "👌 #{loan.item.description}" %></p>
+                <p><%= "📝 #{loan.item.description}" %></p>
               </div>
               <div class="loan-card-item-info-actions">
                 <%=' 💌'%>
@@ -62,7 +62,7 @@
               <div class="loan-card-item-info">
                 <p><%="👤 Borrowed from #{loan.item.user.first_name}" %></p>
                 <p><%="🎯 #{loan.return_date}" %></p>
-                <p><%= "👌 #{loan.item.description}" %></p>
+                <p><%= "📝 #{loan.item.description}" %></p>
               </div>
               <div class="loan-card-item-info-actions">
                 <%=' 💌'%>
