--- a/app/assets/stylesheets/components/_btns.scss
+++ b/app/assets/stylesheets/components/_btns.scss
@@ -15,10 +15,20 @@
 }
 
 
+.borrow-active {
+  border-radius: 61px;
+  border: 1px rgb(0, 0, 0) solid;
+  color: rgb(0, 0, 0);
+  text-decoration: none;
+  padding: 20px 30px;
+  background-color: rgba($color: $green, $alpha: 0.8);
+  text-transform: uppercase;
+}
+
 .lend-btns {
   border: 1px rgba(0, 0, 0, 0.5) solid;
   border-radius: 61px;
-  color: rgb(255, 255, 255);
+  color: rgb(0, 0, 0);
   text-decoration: none;
   padding: 20px 30px;
   text-transform: uppercase;
@@ -28,6 +38,32 @@
   color: rgba($color: #000000, $alpha: 0.8)!important;
   background-color: rgba(255,93,143,0.7)!important;
   // background-color: rgba($color: #ffffff, $alpha: 0.9)!important;
+}
+
+.hidden {
+  border: 1px rgba(0, 0, 0, 0) solid;
+  border-radius: 61px;
+  text-decoration: none;
+  padding: 20px 30px;
+  text-transform: uppercase;
+  color: transparent;
+}
+
+.lend-active {
+  background-color: rgba($color: $green, $alpha: 0.8);
+  border: 1px rgba(0, 0, 0, 1) solid;
+  border-radius: 61px;
+  color: rgb(0, 0, 0);
+  text-decoration: none;
+  padding: 20px 30px;
+  text-transform: uppercase;
+}
+
+.isDisabled {
+  color: currentColor;
+  cursor: not-allowed;
+  opacity: 0.5;
+  text-decoration: none;
 }
 
 .submit-btns {
