trying to make modal work

--- a/app/views/loans/new_borrow.html.erb
+++ b/app/views/loans/new_borrow.html.erb
@@ -10,7 +10,7 @@
       <%= f.input :photo, as: :file %>
       <%= f.input :loan_date %>
       <%= f.input :return_date %>
-      <%= f.submit "Let me borrow this!", class: "btn btn-primary submit-btns" %>
+      <%= f.submit "Let me borrow this!", class: "btn submit-btns" %>
   <% end %>
 
 </div>
