--- a/app/views/loans/new.html.erb
+++ b/app/views/loans/new.html.erb
@@ -10,7 +10,7 @@
       <%= f.association :user, label: "Borrower", label_method: :first_name, value_method: :id, include_blank: false %>
       <%= f.input :loan_date %>
       <%= f.input :return_date %>
-      <%= f.submit "Let me lend this!", class: "btn btn-primary" %>
+      <%= f.submit "Let me lend this!", class: "btn submit-btns" %>
   <% end %>
 
 </div>
