--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -11,7 +11,7 @@
       <% end %>
 
     <div data-navbar-target='borrow'><%= link_to "Borrow an item", loans_borrow_path, class:'borrow-active' %></div>
-    <div data-navbar-target='lend'><%= link_to "Lend an item", loans_borrow_path, class:'lend-active' %></div>
+    <div data-navbar-target='lend'><%= link_to "Lend an item", new_loan_path, class:'lend-active' %></div>
 
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
