hover return buttin and popup review added

--- a/app/views/shared/_new_review.html.erb
+++ b/app/views/shared/_new_review.html.erb
@@ -2,7 +2,7 @@
   <div class="container">
     <h2>Leave a review:</h2>
 
-    <%= simple_form_for [ @loan, @review ] do |f| %>
+    <%= simple_form_for [ loan, @review ] do |f| %>
       <p>Was you item retuned in a good condition?</p>
       <select name="condition" id="condition">
       <option value="Yes">Yes</option>
@@ -17,6 +17,4 @@
       <%= f.submit class:'submit-btns' %>
     <% end %>
   </div>
-  <i class="fa-regular fa-hand-spock"></i>
-  <i class="fa-solid fa-hand-spock"></i>
 </div>
