--- a/app/views/shared/_index_loans.html.erb
+++ b/app/views/shared/_index_loans.html.erb
@@ -5,7 +5,7 @@
         <div class="card-even">
           <% if loan.item.user == current_user %>
             <div class="card-lending">
-              <div class="loan-card-image"><%= cl_image_tag (loan.item.photo.key) %> <button class="review-btn">Mark as Returned</button>
+              <div class="loan-card-image"><%= cl_image_tag (loan.item.photo.key) %> <button class="review-btn submit-btns">Mark as Returned</button>
                                                                                       <div id="myModal" class="modal" data-controller="review">
                                                                                         <div class="modal-content">
                                                                                           <span class="close">&times;</span>
@@ -33,7 +33,7 @@
             </div>
           <% else %>
             <div class="card-borrowing">
-              <div class="loan-card-image"><%= cl_image_tag (loan.item.photo.key) %> <button class="review-btn">Mark as Returned</button>
+              <div class="loan-card-image"><%= cl_image_tag (loan.item.photo.key) %> <button class="review-btn submit-btns">Mark as Returned</button>
                                                                                       <div id="myModal" class="modal">
                                                                                         <div class="modal-content">
                                                                                           <span class="close">&times;</span>
@@ -65,7 +65,7 @@
         <div class="card-odd">
           <% if loan.item.user == current_user %>
             <div class="card-lending">
-              <div class="loan-card-image"><%= cl_image_tag (loan.item.photo.key) %> <button class="review-btn">Mark as Returned</button>
+              <div class="loan-card-image"><%= cl_image_tag (loan.item.photo.key) %> <button class="review-btn submit-btns">Mark as Returned</button>
                                                                                       <div id="myModal" class="modal">
                                                                                         <div class="modal-content">
                                                                                           <span class="close">&times;</span>
@@ -93,7 +93,7 @@
             </div>
           <% else %>
             <div class="card-borrowing">
-              <div class="loan-card-image"><%= cl_image_tag (loan.item.photo.key) %> <button class="review-btn">Mark as Returned</button>
+              <div class="loan-card-image"><%= cl_image_tag (loan.item.photo.key) %> <button class="review-btn submit-btns">Mark as Returned</button>
                                                                                       <div id="myModal" class="modal">
                                                                                         <div class="modal-content">
                                                                                           <span class="close">&times;</span>
