--- a/app/views/shared/_index_loans.html.erb
+++ b/app/views/shared/_index_loans.html.erb
@@ -34,7 +34,7 @@
           <% else %>
             <div class="card-borrowing">
               <div class="loan-card-image"><%= cl_image_tag (loan.item.photo.key) %> <button class="review-btn submit-btns">Mark as Returned</button>
-                                                                                      <div id="myModal" class="modal">
+                                                                                      <div id="myModal" class="modal" data-controller="review">
                                                                                         <div class="modal-content">
                                                                                           <span class="close">&times;</span>
                                                                                           <%= render 'shared/new_review', loan: loan %>
@@ -66,7 +66,7 @@
           <% if loan.item.user == current_user %>
             <div class="card-lending">
               <div class="loan-card-image"><%= cl_image_tag (loan.item.photo.key) %> <button class="review-btn submit-btns">Mark as Returned</button>
-                                                                                      <div id="myModal" class="modal">
+                                                                                      <div id="myModal" class="modal" data-controller="review">
                                                                                         <div class="modal-content">
                                                                                           <span class="close">&times;</span>
                                                                                           <%= render 'shared/new_review', loan: loan %>
@@ -94,7 +94,7 @@
           <% else %>
             <div class="card-borrowing">
               <div class="loan-card-image"><%= cl_image_tag (loan.item.photo.key) %> <button class="review-btn submit-btns">Mark as Returned</button>
-                                                                                      <div id="myModal" class="modal">
+                                                                                      <div id="myModal" class="modal" data-controller="review">
                                                                                         <div class="modal-content">
                                                                                           <span class="close">&times;</span>
                                                                                           <%= render 'shared/new_review', loan: loan %>
