Modal to mark returned works

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,11 +1,11 @@
 <div class= "user-show-container">
   <h1>Your historic with: <%= @user.first_name %> <%= @user.last_name %> </h1>
   <div class="dashboard-container">
-    <div class="loan-index">
+    <div class="loan-index" data-controller='modal'>
       <% @user.loans.each do |loan| %>
         <% if (current_user == loan.item.user || current_user == loan.user) %>
           <% if loan.item.user == current_user %>
-            <div class="card-lending" data-controller='modal'>
+            <div class="card-lending" data-modal-target="loan" data-id= "<%= loan.id %>" >
               <div class="loan-card-image"><%= cl_image_tag (loan.item.photo.key) %></div>
               <p style="color: white; font-size: 40px;"><%= loan.item.item_name %></p>
               <div class="loan-card-item-info">
@@ -23,11 +23,13 @@
                 <% else %>
                   <%= '😒' %>
                 <% end %>
-                <div title="Mark as returned" >
-                <%# <%= link_to '✅', loan_path(loan), method: :delete, class: 'text-decoration-none'%>
-                <button data-action="click->modal#alert" data-modal-target="loan" data-id= "<%= loan.id %>" data-user_id="<%= loan.user %>">
-                ✅</button>
-                </div>
+                <% unless loan.status == 'returned' %>
+                  <div title="Mark as returned" >
+                  <%# <%= link_to '✅', loan_path(loan), method: :delete, class: 'text-decoration-none'%>
+                    <button data-action="click->modal#alert" data-id= "<%= loan.id %>" data-user_id="<%= loan.user %>">
+                    ✅</button>
+                  </div>
+                <% end %>
               </div>
               <div class='chatbox'>
                 <% @chatroom = @chatrooms.find(loan.chatroom_id) %>
