--- a/app/views/shared/_index_loans.html.erb
+++ b/app/views/shared/_index_loans.html.erb
@@ -5,13 +5,14 @@
         <div class="card-even">
           <% if loan.item.user == current_user %>
             <div class="card-lending">
-              <div class="loan-card-image"><%= cl_image_tag (loan.item.photo.key) %> <button class="review-btn submit-btns">Mark as Returned</button>
-                                                                                      <div id="myModal" class="modal" data-controller="review">
-                                                                                        <div class="modal-content">
-                                                                                          <span class="close">&times;</span>
-                                                                                          <%= render 'shared/new_review', loan: loan %>
-                                                                                        </div>
-                                                                                      </div>
+              <div class="loan-card-image"><%= cl_image_tag (loan.item.photo.key) %>
+              <button class="review-btn submit-btns">Mark as Returned</button>
+              <div id="myModal" class="modal" data-controller="review">
+                <div class="modal-content">
+                  <span class="close">&times;</span>
+                  <%= render 'shared/new_review', loan: loan %>
+                </div>
+              </div>
               </div>
               <p style="color: white; font-size: 40px;"><%= loan.item.item_name %></p>
               <div class="loan-card-item-info">
