--- a/app/views/shared/_index_loans.html.erb
+++ b/app/views/shared/_index_loans.html.erb
@@ -1,126 +1,140 @@
 <div class="dashboard-container">
-  <div class="loan-index">
+  <div class="loan-index" data-controller='modal'>
     <% loans.each do |loan| %>
-      <% if loan.id % 2 == 0  %>
-        <div class="card-even">
-          <% if loan.item.user == current_user %>
-            <div class="card-lending">
-              <div class="loan-card-image"><%= cl_image_tag (loan.item.photo.key) %> <button class="review-btn submit-btns">Mark as Returned</button>
-                                                                                      <div id="myModal" class="modal" data-controller="review">
-                                                                                        <div class="modal-content">
-                                                                                          <span class="close">&times;</span>
-                                                                                          <%= render 'shared/new_review', loan: loan %>
+      <% unless loan.status == 'returned' %>
+        <% if loan.id % 2 == 0  %>
+          <div class="card-even">
+            <% if loan.item.user == current_user %>
+              <div class="card-lending" data-modal-target="loan" data-id= "<%= loan.id %>">
+                <div class="loan-card-image"><%= cl_image_tag (loan.item.photo.key) %>
+                  <%# <button class="review-btn submit-btns">Mark as Returned</button>
+                  <div id="myModal" class="modal" data-controller="review">
+                    <div class="modal-content">
+                      <span class="close">&times;</span>
+                      <%= render 'shared/new_review', loan: loan %>
+                    <%# </div>
+                  </div>  %>
+                </div>
+                <p style="color: white; font-size: 40px;"><%= loan.item.item_name %></p>
+                <div class="loan-card-item-info">
+                  <p><%= "👤 Lent to #{loan.user.first_name}" %></p>
+                  <p><%="🎯 #{loan.return_date}" %></p>
+                  <p><%= "📝 #{loan.item.description}" %></p>
+                  <div title="Mark as returned" >
+                    <%# <%= link_to '✅', loan_path(loan), method: :delete, class: 'text-decoration-none'%>
+                      <button class='return-btn' data-action="click->modal#alert" data-id= "<%= loan.id %>" data-user_id="<%= loan.user %>">
+                      ✅</button>
+                    </div>
+                </div>
+                <div class="loan-card-item-info-actions">
+                  <%='💌'%>
+                  <%# <%= link_to '🔄', loan_mark_path(loan), method: :patch %> %>
+                  <% if loan.user.reviews.length >= 2 %>
+                    <%= '🌟' %>
+                  <% elsif loan.user.reviews.length == 1 %>
+                    <%= '⭐' %>
+                  <% else %>
+                    <%= '😒' %>
+                  <% end %>
+                </div>
+              </div>
+            <% else %>
+              <div class="card-borrowing">
+                <div class="loan-card-image"><%= cl_image_tag (loan.item.photo.key) %>
+                <%# <button class="review-btn submit-btns">Mark as Returned</button>
+                <div id="myModal" class="modal">
+                  <div class="modal-content">
+                    <span class="close">&times;</span>
+                    <%= render 'shared/new_review', loan: loan %>
+                  <%# </div>
+                </div> %>
+                </div>
+                <p style="color: white; font-size: 40px;"><%= loan.item.item_name %></p>
+                <div class="loan-card-item-info">
+                  <p><%="👤 Borrowed from #{loan.item.user.first_name}" %></p>
+                  <p><%="🎯 #{loan.return_date}" %></p>
+                  <p><%= "📝 #{loan.item.description}" %></p>
+                </div>
+                <div class="loan-card-item-info-actions">
+                  <%='💌'%>
+                  <%# <%= link_to '🔄', loan_mark_path(loan), method: :patch %> %>
+                  <% if loan.user.reviews.length >= 2 %>
+                    <%= '🌟' %>
+                  <% elsif loan.user.reviews.length == 1 %>
+                    <%= '⭐' %>
+                  <% else %>
+                    <%= '😒' %>
+                  <% end %>
+                </div>
+              </div>
+            <% end %>
+          </div>
+        <% else %>
+          <div class="card-odd">
+            <% if loan.item.user == current_user %>
+              <div class="card-lending" data-modal-target="loan" data-id= "<%= loan.id %>">
+                <div class="loan-card-image"><%= cl_image_tag (loan.item.photo.key) %> <button class="review-btn submit-btns">Mark as Returned</button>
+                                                                                        <div id="myModal" class="modal">
+                                                                                          <div class="modal-content">
+                                                                                            <span class="close">&times;</span>
+                                                                                            <%= render 'shared/new_review', loan: loan %>
+                                                                                          </div>
                                                                                         </div>
-                                                                                      </div>
+                </div>
+                <p style="color: white; font-size: 40px;"><%= loan.item.item_name %></p>
+                <div class="loan-card-item-info">
+                  <p><%= "👤 Lent to #{loan.user.first_name}" %></p>
+                  <p><%="🎯 #{loan.return_date}" %></p>
+                  <p><%= "📝 #{loan.item.description}" %></p>
+                  <div title="Mark as returned" >
+                    <%# <%= link_to '✅', loan_path(loan), method: :delete, class: 'text-decoration-none'%>
+                      <button class='return-btn' data-action="click->modal#alert" data-id= "<%= loan.id %>" data-user_id="<%= loan.user %>">
+                      ✅</button>
+                    </div>
+                </div>
+                <div class="loan-card-item-info-actions">
+                  <%='💌'%>
+                  <%# <%= link_to '🔄', loan_mark_path(loan), method: :patch %>
+                  <% if loan.user.reviews.length >= 2 %>
+                    <%= '🌟' %>
+                  <% elsif loan.user.reviews.length == 1 %>
+                    <%= '⭐' %>
+                  <% else %>
+                    <%= '😒' %>
+                  <% end %>
+                </div>
               </div>
-              <p style="color: white; font-size: 40px;"><%= loan.item.item_name %></p>
-              <div class="loan-card-item-info">
-                <p><%= "👤 Lent to #{loan.user.first_name}" %></p>
-                <p><%="🎯 #{loan.return_date}" %></p>
-                <p><%= "📝 #{loan.item.description}" %></p>
-              </div>
-              <div class="loan-card-item-info-actions">
-                <%='💌'%>
-                <%# <%= link_to '🔄', loan_mark_path(loan), method: :patch %> %>
-                <% if loan.user.reviews.length >= 2 %>
-                  <%= '🌟' %>
-                <% elsif loan.user.reviews.length == 1 %>
-                  <%= '⭐' %>
-                <% else %>
-                  <%= '😒' %>
-                <% end %>
-              </div>
-            </div>
-          <% else %>
-            <div class="card-borrowing">
-              <div class="loan-card-image"><%= cl_image_tag (loan.item.photo.key) %> <button class="review-btn submit-btns">Mark as Returned</button>
-                                                                                      <div id="myModal" class="modal">
-                                                                                        <div class="modal-content">
-                                                                                          <span class="close">&times;</span>
-                                                                                          <%= render 'shared/new_review', loan: loan %>
+            <% else %>
+              <div class="card-borrowing">
+                <div class="loan-card-image"><%= cl_image_tag (loan.item.photo.key) %> <button class="review-btn submit-btns">Mark as Returned</button>
+                                                                                        <div id="myModal" class="modal">
+                                                                                          <div class="modal-content">
+                                                                                            <span class="close">&times;</span>
+                                                                                            <%= render 'shared/new_review', loan: loan %>
+                                                                                          </div>
                                                                                         </div>
-                                                                                      </div>
+                </div>
+                <p style="color: white; font-size: 40px;"><%= loan.item.item_name %></p>
+                <div class="loan-card-item-info">
+                  <p><%="👤 Borrowed from #{loan.item.user.first_name}" %></p>
+                  <p><%="🎯 #{loan.return_date}" %></p>
+                  <p><%= "📝 #{loan.item.description}" %></p>
+                </div>
+                <div class="loan-card-item-info-actions">
+                  <%='💌'%>
+                  <%# <%= link_to '🔄', loan_mark_path(loan), method: :patch %> %>
+                  <% if loan.user.reviews.length >= 2 %>
+                    <%= '🌟' %>
+                  <% elsif loan.user.reviews.length == 1 %>
+                    <%= '⭐' %>
+                  <% else %>
+                    <%= '😒' %>
+                  <% end %>
+                </div>
               </div>
-              <p style="color: white; font-size: 40px;"><%= loan.item.item_name %></p>
-              <div class="loan-card-item-info">
-                <p><%="👤 Borrowed from #{loan.item.user.first_name}" %></p>
-                <p><%="🎯 #{loan.return_date}" %></p>
-                <p><%= "📝 #{loan.item.description}" %></p>
-              </div>
-              <div class="loan-card-item-info-actions">
-                <%='💌'%>
-                <%# <%= link_to '🔄', loan_mark_path(loan), method: :patch %> %>
-                <% if loan.user.reviews.length >= 2 %>
-                  <%= '🌟' %>
-                <% elsif loan.user.reviews.length == 1 %>
-                  <%= '⭐' %>
-                <% else %>
-                  <%= '😒' %>
-                <% end %>
-              </div>
-            </div>
-          <% end %>
-        </div>
-      <% else %>
-        <div class="card-odd">
-          <% if loan.item.user == current_user %>
-            <div class="card-lending">
-              <div class="loan-card-image"><%= cl_image_tag (loan.item.photo.key) %> <button class="review-btn submit-btns">Mark as Returned</button>
-                                                                                      <div id="myModal" class="modal">
-                                                                                        <div class="modal-content">
-                                                                                          <span class="close">&times;</span>
-                                                                                          <%= render 'shared/new_review', loan: loan %>
-                                                                                        </div>
-                                                                                      </div>
-              </div>
-              <p style="color: white; font-size: 40px;"><%= loan.item.item_name %></p>
-              <div class="loan-card-item-info">
-                <p><%= "👤 Lent to #{loan.user.first_name}" %></p>
-                <p><%="🎯 #{loan.return_date}" %></p>
-                <p><%= "📝 #{loan.item.description}" %></p>
-              </div>
-              <div class="loan-card-item-info-actions">
-                <%='💌'%>
-                <%# <%= link_to '🔄', loan_mark_path(loan), method: :patch %>
-                <% if loan.user.reviews.length >= 2 %>
-                  <%= '🌟' %>
-                <% elsif loan.user.reviews.length == 1 %>
-                  <%= '⭐' %>
-                <% else %>
-                  <%= '😒' %>
-                <% end %>
-              </div>
-            </div>
-          <% else %>
-            <div class="card-borrowing">
-              <div class="loan-card-image"><%= cl_image_tag (loan.item.photo.key) %> <button class="review-btn submit-btns">Mark as Returned</button>
-                                                                                      <div id="myModal" class="modal">
-                                                                                        <div class="modal-content">
-                                                                                          <span class="close">&times;</span>
-                                                                                          <%= render 'shared/new_review', loan: loan %>
-                                                                                        </div>
-                                                                                      </div>
-              </div>
-              <p style="color: white; font-size: 40px;"><%= loan.item.item_name %></p>
-              <div class="loan-card-item-info">
-                <p><%="👤 Borrowed from #{loan.item.user.first_name}" %></p>
-                <p><%="🎯 #{loan.return_date}" %></p>
-                <p><%= "📝 #{loan.item.description}" %></p>
-              </div>
-              <div class="loan-card-item-info-actions">
-                <%='💌'%>
-                <%# <%= link_to '🔄', loan_mark_path(loan), method: :patch %> %>
-                <% if loan.user.reviews.length >= 2 %>
-                  <%= '🌟' %>
-                <% elsif loan.user.reviews.length == 1 %>
-                  <%= '⭐' %>
-                <% else %>
-                  <%= '😒' %>
-                <% end %>
-              </div>
-            </div>
-          <% end %>
-        </div>
+            <% end %>
+          </div>
+        <% end %>
       <% end %>
     <% end %>
   </div>
