--- a/app/views/shared/_loans_index.html.erb
+++ b/app/views/shared/_loans_index.html.erb
@@ -3,6 +3,7 @@
     <% @counter_borrowed = 0 %>
     <% @counter_lent = 0 %>
     <% user.loans.each do |loan| %>
+  <% unless loan.status == 'returned' %>
       <% if loan.item.user.last_name == current_user.last_name %>
         <% @counter_borrowed += 1 %>
       <% end %>
@@ -14,6 +15,7 @@
         <% end %>
       <% end %>
     <% end %>
+   <% end %>
 
   <%= link_to user_path(user), :action => 'go' do %>
     <div class="loans-per-user">
