lenders, borrowers, user_lendings and user_borrowings methods"

--- a/app/views/loans/lenders.html.erb
+++ b/app/views/loans/lenders.html.erb
@@ -1,4 +1,4 @@
-
-<%= "Borrowers: #{borrowers}" %>
-<br>
-<%= "Lenders: #{lenders}" %>
+<% borrowings = user_borrowings(current_user) %>
+<% borrowings.each do |borrowing| %>
+<%= borrowing.item.item_name %>
+<% end %>
